# tester.sys

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.XML  README.md  chars.cpp  chars.h  corestrings.cpp  corestrings.h  export.cpp  extender.cpp  extender.def  extender.h  files.cpp  files.h  httpServer.cpp  httpServer.h  inotify.cpp  inotify.h  json.cpp  json.h  regex.cpp  regex.h  root.cpp  root.h  shooter.cpp  shooter.h  transform.cpp  transform.h  watcher.cpp  watcher.h
1c/: addindefbase.h  com.h  componentbase.h  imemorymanager.h  stdafx.h  types.h
tests/: watcher.cpp
