cmake_minimum_required ( VERSION 3.16 )
project ( tester )
set ( CMAKE_CXX_STANDARD 17 )
set ( CMAKE_CXX_STANDARD_REQUIRED ON )
add_definitions ( -DUNICODE )
if ( WIN32 )
    add_definitions ( -D_WIN32_WINNT=0x0601 )
endif ()
if ( UNIX )
    find_package ( X11 REQUIRED )
    find_package ( PNG REQUIRED )
    include_directories ( ${X11_INCLUDE_DIR} ${PNG_INCLUDE_DIR} )
endif ()
file ( GLOB sources *.h *.cpp *.def 1c/*.h 1c/*.cpp )
add_library ( ${PROJECT_NAME} SHARED ${sources} )
if ( WIN32 )
    set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
endif ()
target_link_libraries ( ${PROJECT_NAME} ${X11_LIBRARIES} ${PNG_LIBRARY} )
