cmake_minimum_required ( VERSION 3.10 )
project ( tester )
set ( CMAKE_CXX_STANDARD 17 )
set ( CMAKE_CXX_STANDARD_REQUIRED ON )
add_definitions ( -DUNICODE )
if ( WIN32 )
    add_definitions ( -D_WIN32_WINNT=0x0601 /MT )
elseif ( UNIX )
    find_package ( X11 REQUIRED )
    find_package ( PNG REQUIRED )
    include_directories ( ${X11_INCLUDE_DIR} ${PNG_INCLUDE_DIRS} )
endif ()
file ( GLOB sources *.h *.cpp *.def 1c/*.h 1c/*.cpp )
add_library ( ${PROJECT_NAME} SHARED ${sources} )
set_target_properties ( ${PROJECT_NAME} PROPERTIES LINK_SEARCH_START_STATIC 1 )
set_target_properties ( ${PROJECT_NAME} PROPERTIES LINK_SEARCH_END_STATIC 1 )
if ( UNIX )
    target_link_options ( ${PROJECT_NAME} PUBLIC -static-libstdc++ )
endif ()
target_link_libraries ( ${PROJECT_NAME} ${X11_LIBRARIES} ${PNG_LIBRARIES} )
